Implement XML Validation Framework
- Added ValidationError class to represent validation errors with detailed information.
- Introduced ValidationResult class to encapsulate the results of validation operations, including errors and warnings.
- Created ValidationWarning class to handle warnings during validation.
- Developed XmlDirectoryValidator interface for validating XML directory structures and files.
- Implemented ValidatorExample class to demonstrate usage of the validation framework.
- Added unit tests for ValidationResult and ValidationError classes to ensure functionality.
- Included various test schemas for both valid and invalid XML structures to validate the robustness of the framework.